﻿[B]Changelog[/B]
* Fixed: VTM.be did not parse all folders (Fixes #1222)

[I]Previous Changes[/I]
* Fixed: VRT.nu did not parse folders (Fixes #1218)
* Added: if no username was configured, log this as a warning (See #1187)
* Fixed: Prefer HLS over Dash streams for unencrypted VRT.nu streams (Fixes 1179)
* Fixed: parsing of videos for KetNET (Fixes #1179)
* Added: more Premium channel for Stievie (See #1030)
* Fixed: VRT.nu changes broke parsing....again (Fixes #1166)
* Fixed: VRT.nu changes broke parsing (Fixes #1140)
* Fixed: VTM.be parsing broke due to timestamps (Fixes #1128)
* Fixed: issue with AWS timestamp not being in English (Fixes #1094)
* Fixed: VTM Nieuws did not play (Fixes #1092)
* Changed: Hide VTM Nieuws from the VTM.be channel (See #1092)
* Removed: De Redactie (See #1092)
* Fixed: VRT.nu categories (Fixes #1091)
* Fixed: sorting order of listings (Fixes #1081)
* Fixed: some clips would not play (Fixes #1060)
* Fixed: Match some more dates for VRT.nu (Fixes #1070)
* Fixed: Stievie login broke (Fixes 1053)
* Fixed: possible caching issue with VRT.nu login
* Fixed: VRT.nu live streams (Fixes #1028)
* Fixed: empty category listings in VRT.nu (Fixes #1024)
* Fixed: missing episodes for VRT.nu (Fixes #1021)
* Fixed: Vier.be and vijf.be updated their site (Fixes #1009)
* Fixed: VRT.nu changed site layout (Fixes #1008)
* Added: VRT.nu DRM support (Fixes #1002)
* Fixed: Single video items were not parsed for VRT.nu (Fixes #1002)
* Fixed: VTM.be updated their site (Fixes #1003)
* Updated: Belgium logo's and images (See #1005)
* Fixed: Vier & Vijf.be had no videos (Fixes #992)
* Fixed: VRT.nu changed site layout again.... (Fixes #984)
* Added: Subs for VRT.nu if the Adaptive Add-on is not used.
* Fixed: VRT.nu 'remix-aka' streams (See #981)
* Fixed: Stievie and VTM Live streams. These require Kodi Leia or higher (Fixes #981)
* Fixed: VRT.nu changed site layout (Fixes #974)
* Added: Sporza Live stream (See #955)