@@ -1,4 +1,5 @@
 ﻿[B]Changelog[/B]
+* Fixed: Use Dash for VRT.nu live streams and show subtitles (Fixes #1223)
 * Fixed: VTM.be did not parse all folders (Fixes #1222)
 
 [I]Previous Changes[/I]
